name:           units-parser
version:        0.1.0.0
cabal-version:  >= 1.10
synopsis:       A parser for units of measure
category:       Math
author:         Richard Eisenberg <eir@cis.upenn.edu>
stability:      experimental
license:        BSD3
build-type:     Simple
description:

    The units package provides a mechanism for compile-time
    dimensional analysis in Haskell programs. It defines an embedded
    type system based on units-of-measure. The units defined are fully
    extensible, and need not relate to physical properties.

    The package supports defining multiple inter-convertible units,
    such as Meter and Foot. When extracting a number from a
    dimensioned quantity, the desired unit must be specified, and the
    value is converted into that unit.

    If you are looking for specific systems of units (such as SI),
    please see the `units-defs` package.

    The Haddock documentation is insufficient for using the units
    package. Please see the README file, available from the package
    home page.

library
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5
               , mtl >= 1.1
               , multimap >= 1.2
               , containers >= 0.4
               , parsec >= 3
  exposed-modules:
    Data.Metrology.ParseUnit

  default-language:   Haskell2010
