name:           units-parser
version:        0.1.0.0
cabal-version:  >= 1.10
synopsis:       A parser for units of measure
category:       Math
author:         Richard Eisenberg <eir@cis.upenn.edu>
stability:      experimental
license:        BSD3
build-type:     Simple
description:

    The @units-parser@ package provides a parser for unit expressions
    with F#-style syntax, to support the @units@ package and other
    packages providing type-level units of measure.

library
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5
               , mtl >= 1.1
               , multimap >= 1.2
               , containers >= 0.4
               , parsec >= 3
  exposed-modules:
    Text.Parse.Units

  default-language:   Haskell2010
