load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "numbers")
haskell_import(name = "fixed")
haskell_import(name = "bifunctors")
haskell_import(name = "text")
haskell_import(name = "formatting")
haskell_import(name = "uom-plugin")

haskell_library(
    name = "flight-units",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":numbers",
        ":fixed",
        ":bifunctors",
        ":text",
        ":formatting",
        ":uom-plugin",
        "//siggy-chardust:siggy-chardust",
        ],
    visibility = ["//visibility:public"],
)
