cabal-version: 1.12
name:           uom-plugin-examples
version:        0.4.0.0
synopsis:       Examples of the use of uom-plugin
description:    This package provides examples of the use of uom-plugin
category:       Type System
author:         Adam Gundry <adam@well-typed.com>
maintainer:     Adam Gundry <adam@well-typed.com>
copyright:      Copyright (c) 2014-2022, Adam Gundry
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2
build-type:     Simple

executable Examples
  main-is: Examples.hs
  other-modules:
      RationalExamples
  hs-source-dirs:
      .
  build-depends:
      base >=4.9.1.0 && <5
    , uom-plugin
  default-language: Haskell2010
