cabal-version: 1.12
name:           uom-plugin-tutorial
version:        0.4.0.0
synopsis:       A tutorial for the Units of measure typechecker plugin
description:    A tutorial for the units of measure typechecker plugin, checked with doctest.
category:       Type System
author:         Adam Gundry <adam@well-typed.com>
maintainer:     Adam Gundry <adam@well-typed.com>
copyright:      Copyright (c) 2022, Adam Gundry
license:        BSD3
tested-with:    GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2
build-type:     Simple

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  other-modules:
      Data.UnitsOfMeasure.Tutorial
  hs-source-dirs:
      test-suite-doctest
      doc
  ghc-options: -Wall -fno-warn-unticked-promoted-constructors -rtsopts -threaded -with-rtsopts=-N -fplugin Data.UnitsOfMeasure.Plugin
  build-depends:
      base >=4.9.1.0 && <5
    , doctest >=0.13.0
    , uom-plugin
  -- doctest doesn't yet build on 9.4
  if impl(ghc >= 9.4)
    buildable: False
  default-language: Haskell2010
