name:                uom-plugin
version:             0.1.0.0
synopsis:            Units of measure as a GHC typechecker plugin
category:            Type System
description:         A prototype typechecker plugin for GHC with support for units of measure
license:             BSD3
license-file:        LICENSE
author:              Adam Gundry <adam@well-typed.com>
maintainer:          Adam Gundry <adam@well-typed.com>
bug-reports:         https://github.com/adamgundry/uom-plugin/issues
stability:           experimental
copyright:           Copyright (c) 2014, Adam Gundry
build-type:          Simple
cabal-version:       >=1.10
description:

    The @uom-plugin@ library adds support for units of measure to GHC
    using the new experimental facility for typechecker plugins, which
    is available in recent builds of GHC HEAD and will be included in
    GHC 7.10.  See "Data.UnitsOfMeasure.Tutorial" for an introduction
    to the library.

source-repository head
  type:     git
  location: https://github.com/adamgundry/uom-plugin.git

library
  exposed-modules:     Data.UnitsOfMeasure,
                       Data.UnitsOfMeasure.Convert,
                       Data.UnitsOfMeasure.Defs,
                       Data.UnitsOfMeasure.Internal,
                       Data.UnitsOfMeasure.Plugin,
                       Data.UnitsOfMeasure.Show,
                       Data.UnitsOfMeasure.Singleton,
                       Data.UnitsOfMeasure.Tutorial
  other-modules:       Data.UnitsOfMeasure.Plugin.Convert,
                       Data.UnitsOfMeasure.Plugin.NormalForm,
                       Data.UnitsOfMeasure.Plugin.Unify,
                       Data.UnitsOfMeasure.TH,
                       TcPluginExtras
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7 && <5,
                       ghc >= 7.9 && <7.11,
                       template-haskell >=2.9 && <2.11,
                       containers >=0.5 && <0.6,
                       units-parser >=0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unticked-promoted-constructors -dcore-lint

test-suite test-uom-plugin
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  other-extensions:    TemplateHaskell
  build-depends:       base, uom-plugin,
                       tasty >=0.10 && <0.11, tasty-hunit >=0.9 && <0.10
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -O0 -dcore-lint
